# plate-solver

./: .gitignore  CODEBASE-REVIEW.md  Cargo.toml  ENVIRONMENT.md  GUARDTEST.md  README.md  deny.toml  plan-mobile-specs.md  plan-openspec-docs.md  plan.md  rustfmt.toml
.claude/agents/: ps-coder.md  ps-judge.md
.claude/skills/forge/: SKILL.md  STRUCTURE.md  plan-template.md
.claude/skills/grind/: SKILL.md
.claude/skills/grind-detach/: SKILL.md
.github/: provenance-priors.txt
.github/actions/attest/: action.yml
.github/workflows/: ci.yml
crates/database-generation/: Cargo.toml
crates/database-generation/src/: catalog.rs  cleanup.rs  config.rs  fov_ladder.rs  lattice.rs  lib.rs  main.rs  num_fields.rs  pattern_catalog.rs  patterns.rs  proper_motion.rs  serialize.rs  thinning.rs
crates/database-generation/tests/: catalog_parsing.rs  reproducible_build.rs  serialize.rs  serialize_roundtrip.rs
crates/database-generation/tests/fixtures/: mod.rs
crates/grpc-service/: Cargo.toml  build.rs
crates/grpc-service/proto/: plate_solver.proto
crates/grpc-service/src/: lib.rs  server.rs
crates/grpc-service/tests/: service_acceptance.rs
crates/math-core/: Cargo.toml
crates/math-core/src/: attitude.rs  binomial.rs  fov.rs  lib.rs  pattern.rs  residuals.rs
crates/pattern-database/: Cargo.toml
crates/pattern-database/src/: format.rs  io.rs  kdtree.rs  lib.rs  load.rs  lookup.rs  properties.rs
crates/pattern-database/tests/: load.rs  loader.rs  smoke.rs  spatial.rs
crates/pattern-database/tests/fixtures/: empty_slots.npz  legacy_fallbacks.npz  minimal.npz  s64.npz  spatial.npz  tycho.npz  u16.npz  u32.npz
crates/plate-solver/: Cargo.toml
crates/plate-solver/src/: candidates.rs  input.rs  iteration.rs  lib.rs  preparation.rs  refine.rs  solve.rs  status.rs  verify.rs
crates/plate-solver/tests/: reference_parity.rs  solve_acceptance.rs
crates/ps-core/: Cargo.toml
crates/ps-core/src/: lib.rs
crates/star-detection/: Cargo.toml
crates/star-detection/examples/: debug_detect.rs
crates/star-detection/src/: binning.rs  centroid.rs  detect.rs  lib.rs  noise.rs  star.rs
crates/star-detection/tests/: debug_detect.rs  parity.rs
crates/star-detection/tests/data/: cedar_goldens_bin1_sigma8.json
docs/: audit-run-07-pinhole.md  review-judge-gate.md
docs/benchmarks/: report.html  report.md
notes/: C1-lazy-combinations-fix.md  benchmark-before-after.html  feat-10-plan-overview.html  perf-improvement-proposals.md  solve-perf-followups-spec.md  solve-perf-implementation-plan.md  solve-perf-measurements.md  solve-performance-handoff.md
openspec/: IMPLEMENTATION-STATUS.md  PRD.md  STATUS.md  project.md
openspec/changes/feat-01-foundation-math-core/: tasks.md
openspec/changes/feat-02-star-detection/: design.md  tasks.md
openspec/changes/feat-05-plate-solver/: tasks.md  (+2 more)
proto/: plate_solver.proto
ps-core/: Cargo.toml
ps-core/src/: angle.rs  attitude.rs  celestial.rs  distortion.rs  false_alarm.rs  fov.rs  lib.rs  pattern.rs  projection.rs  residuals.rs
ps-core/tests/: angle_parity.rs  attitude_parity.rs  celestial_parity.rs  distortion_parity.rs  false_alarm_parity.rs  fixtures_present.rs  fov_parity.rs  pattern_parity.rs  projection_parity.rs  residuals_parity.rs
ps-db/: Cargo.toml
ps-db/examples/: npz_to_native.rs
ps-db/src/: importer.rs  layout.rs  lib.rs  loader.rs  lookup.rs  mmap.rs
ps-db/tests/: load_npz.rs  mmap_result.rs
ps-db/tests/fixtures/: hash_lookup.json  nearby_stars.json
ps-dbgen/: Cargo.toml
ps-dbgen/src/: cleanup.rs  fov.rs  hash_insert.rs  lib.rs  main.rs  patterns.rs  prime.rs  vectors.rs
ps-dbgen/src/catalog/: bsc5.rs  hip.rs  mod.rs  tyc.rs
ps-dbgen/tests/: catalog_parsers.rs  cleanup.rs  e2e.rs  hash_insert_test.rs
ps-detect/: Cargo.toml
ps-detect/src/: binning.rs  blob.rs  detect.rs  gate.rs  histogram.rs  io.rs  lib.rs  noise.rs
ps-detect/tests/: binning_parity.rs  detect_errors.rs  detect_parity.rs  gate_parity.rs  noise_parity.rs  scaffold.rs
ps-grpc/: Cargo.toml  build.rs
ps-grpc/examples/: shmem_bench.rs
ps-grpc/proto/: plate_solver.proto
ps-grpc/src/: lib.rs  main.rs  service.rs
ps-solve/: Cargo.toml
ps-solve/examples/: combo_count.rs
ps-solve/src/: lib.rs
ps-solve/tests/fixtures/: reference_solve.json
ps-web/: Cargo.toml  README.md
ps-web/frontend/: .gitignore  index.html  vite.config.ts
ps-web/frontend/e2e/: smoke.mjs
ps-web/frontend/src/: App.tsx  api.ts  index.css  types.ts
ps-web/frontend/src/components/: AdvancedFields.tsx  AladinView.tsx  SolveResult.tsx  StarOverlay.tsx  StarsTable.tsx  StatGrid.tsx  StatusBanner.tsx  UploadCard.tsx
ps-web/src/: lib.rs  main.rs  solve.rs
ps-web/static/: index.html
ps-web/tests/: solve_integration.rs
reference-solutions/cedar-detect/: Cargo.toml
reference-solutions/docs/: 01-overview-and-concepts.md  02-coordinate-systems-and-math.md  03-star-detection-tetra3.md  04-star-detection-cedar-detect.md  05-database-generation.md  06-plate-solving.md  07-cedar-detect-service-api.md  08-tetra3-vs-cedar-comparison.md  README.md
scripts/ci/: verify-fresh-authoring.sh
standards/: ENVIRONMENT.md  ENVIRONMENT.overlay.template.md  RATIFY.md  README.md
standards/rust/: GATES.md  clippy.toml  deny.toml  workspace-lints.md
standards/rust/canary/: Cargo.toml
standards/rust/canary/crates/canary-core/: Cargo.toml
standards/rust/canary/crates/canary-core/benches/: sep.rs
standards/rust/canary/crates/canary-core/fixtures/: golden.json
standards/rust/canary/crates/canary-core/src/: lib.rs
standards/rust/canary/crates/canary-core/tests/: parity.rs
standards/rust/canary/crates/canary-parse/fuzz/: Cargo.toml
standards/rust/canary/crates/canary-parse/fuzz/fuzz_targets/: parse.rs
standards/rust/canary/crates/canary-parse/src/: lib.rs
standards/universal/: GATES.md
tools/: ralph-grind.sh  setup-toolchain.sh
tools/parity/: README.md  capture_core.py  capture_detect.py  capture_hash_lookup.py  capture_nearby_stars.py  capture_solve.py  check_env.py  requirements-tetra3-orig.txt  requirements.txt
universal/: OPUS-REVIEW.md
(+81 files in other folders)
