[workspace]
resolver = "2"
members = ["crates/ps-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bryantharpe/plate-solver"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
