[workspace]
members = ["crates/*"]
exclude = ["reference-solutions/cedar-detect"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bryantharpe/plate-solver"

[workspace.dependencies]
math-core = { path = "crates/math-core" }
star-detection = { path = "crates/star-detection" }
