[package]
name = "ps-db"
version = "0.1.0"
edition = "2021"

[dependencies]
ps-core = { path = "../ps-core" }
kiddo = { workspace = true, optional = true }
memmap2 = { workspace = true }
half = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
kd-tree = ["kiddo"]
