[package]
name = "ps-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
ps-detect = { path = "../ps-detect" }
ps-solve = { path = "../ps-solve" }
ps-db = { path = "../ps-db" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
memmap2 = { workspace = true }
clap = { workspace = true }
async-trait = "0.1"
tonic-web = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
image = { workspace = true }
ps-db = { path = "../ps-db" }
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
reqwest = { version = "0.11" }
tokio-stream = { version = "0.1", features = ["net"] }
