[package]
name = "database-generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Offline star-catalog preprocessing for the plate-solver sky index."

[dependencies]
math-core = { version = "0.1.0", path = "../math-core" }

[dev-dependencies]
