[package]
name = "database-generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Offline star-catalog preprocessing for the plate-solver sky index."

[dependencies]
clap = { version = "4.6", default-features = false, features = ["std", "help", "derive"] }
math-core = { version = "0.1.0", path = "../math-core" }
pattern-database = { version = "0.1.0", path = "../pattern-database" }
zip = "0.6.6"

[dev-dependencies]
tempfile = "3.10"
