[package]
name = "grpc-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC service surface for the plate solver: PlateSolver RPCs, proto codegen, and solver wiring."

[dependencies]
pattern-database = { version = "0.1.0", path = "../pattern-database" }
plate-solver = { version = "0.1.0", path = "../plate-solver" }
star-detection = { version = "0.1.0", path = "../star-detection" }
prost-types = "0.14.4"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.6"
tower = "0.5.2"
tokio-stream = "0.1.18"
hyper-util = "0.1.20"
prost = "0.14.4"
tonic-prost = "0.14.6"

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
# Needed to construct a `PinholeCamera` when unit-testing the Solution boundary
# conversion, which discriminates FOV units on the presence of a camera.
math-core = { version = "0.1.0", path = "../math-core" }
