[package]
name = "pattern-database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-side precomputed sky index: on-disk format, loader, KD-tree, and lookup filters."

[dependencies]
math-core = { version = "0.1.0", path = "../math-core" }
serde = { version = "1.0", features = ["derive"] }
npyz = { version = "0.9.1", features = ["npz"] }
memmap2 = "0.9.0"
kdtree = { version = "0.8.0", default-features = false }

[dev-dependencies]
tempfile = "3.10"
