[package]
name = "plate-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lost-in-space plate solver: centroid-to-attitude identification engine."

[dependencies]
math-core = { version = "0.1.0", path = "../math-core" }
star-detection = { version = "0.1.0", path = "../star-detection" }
pattern-database = { version = "0.1.0", path = "../pattern-database" }

[dev-dependencies]
