[package]
name = "star-detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Star detection pipeline: noise estimation, binning cascade, sub-pixel centroiding, and brightness measurement."

[dependencies]

[dev-dependencies]
image = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
