[package]
name = "canary-core"
description = "Canary: numeric core that exercises the coverage, mutation, property, doctest, bench, and parity gates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "sep"
harness = false
